tests/rustdoc-ui/doc-auto-cfg-values-non-ident.stderr
error[E0565]: malformed `doc` attribute input
  --> $DIR/doc-auto-cfg-values-non-ident.rs:5:1
   |
LL | #[doc(auto_cfg(hide(a, values(::b))))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---^^^^^
   |                               |
   |                               expected a valid identifier here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0565`.
